more mlr3 workflow

--- a/analysis/mlr3_workflow.qmd
+++ b/analysis/mlr3_workflow.qmd
@@ -47,6 +47,7 @@ library(mlr3)
 library(mlr3spatial)
 library(mlr3spatiotempcv)
 library(mlr3learners)
+library(mlr3tuning)
 # Packages for models - change these based on what type of model you build
 library(glmnet)
 ```
@@ -70,8 +71,12 @@ head(task)
 
 The learner is created based on what type of model we want to train. See above for a list of learners that are available (and keep in mind that you could load `mlr3extralearners` for an even bigger selection). We are interested in classification learners, since the input is categorized into two different classes.
 
+`classif.glmnet` is a linear regression strategy for classification problems. Notably, `lambda` is a hyperparameter that cannot be automatically optimized. A bandaid solution was to specify a value in the creation of the learner, which silences a warning at prediction time. I am currently reading about `mlr3tuning` and how to create a wrapper tuner object that allows manual specifications for hyperparameter optimization (HPO).
+
 ```{r}
-learner <- lrn("classif.log_reg", predict_type = "prob")
+learner <- lrn("classif.glmnet", 
+               lambda = 0.01,
+               predict_type = "prob")
 print(learner)
 ```
 
@@ -109,9 +114,42 @@ conf_matrix <- predicted$confusion
 print(conf_matrix)
 ```
 
-## Step 2. Add a resampling method
+## Step 2. Tune and resample
 
-For any machine learning
+In order to train this model with some hyperparameter tuning, we need to go back and specify which hyperparameters need to be tuned in the learner.
+
+```{r}
+learner <- lrn("classif.glmnet", 
+               alpha = to_tune(1e-5, 1),
+               s = to_tune(1e-5, 1e5),
+               predict_type = "prob")
+
+tuner = tnr("grid_search", resolution = 5, batch_size = 5)
+
+resampling <- rsmp("cv", folds = 5)
+
+learner_at = auto_tuner(
+  method = tnr("grid_search", resolution = 5, batch_size = 5),
+  learner = learner,
+  resampling = resampling,
+  measure = msr("classif.auc"),
+)
+print(learner_at)
+```
+
+```{r}
+learner_at$train(task)
+```
+
+```{r}
+predicted <- learner_at$predict(task)
+print(predicted$score(msrs(c("classif.auc", "classif.acc"))))
+print(predicted$confusion)
+```
+
+## Step 3. Add a resampling method
+
+For any machine learning workflow, you want to including a resampling method that will train models on a couple different subsets of data as training and testing sets to reduce the role of chance and produce a more robust basis for evaluating the model's performance.
 
 ```{r}
 
