--- a/analysis/resampling_methods.qmd
+++ b/analysis/resampling_methods.qmd
@@ -34,8 +34,8 @@ knitr::opts_chunk$set(
 ```{r}
 #| echo: false
 load(paste0(params$data_dir, params$training_data))
-pnts <- vect(paste0(params$data_dir, params$points))
-dem <- rast(paste0(params$data_dir, params$dem))
+pnts <- terra::vect(paste0(params$data_dir, params$points))
+dem <- terra::rast(paste0(params$data_dir, params$dem))
 ```
 
 ```{r load, include = FALSE}
@@ -57,7 +57,8 @@ Data is loaded. First we need to look at the points on a map.
 ```{r}
 orig_p <- par(mar = c(5, 5, 0, 5))
 
-plot(sample_pnts[, "x"], sample_pnts[, "y"], pch = 20)
+# plot(dem)
+plot(x = sample_pnts[, "x"], y = sample_pnts[, "y"], pch = 20)
 sample_pnts[, "class"] <- as.factor(sample_pnts[, "class"])
 
 par(orig_p)
@@ -80,30 +81,47 @@ learner <- lrn("classif.log_reg",
 
 ```{r}
 #| echo: false
-head(sample_pnts[, 2:10])
+head(sample_pnts)
 ```
 
-We can start running a cluster-based spatial CV method. This method does not consider the temporal distribution of the points, but uses a k-means clustering algorithm to split the data into the defined number of regions based on their x-y coordinates.
+We can start running a cluster-based spatial CV method. This method does not consider the temporal distribution of the points, but uses a k-means clustering algorithm to split the data into the defined number of regions based on their x-y coordinates. This is one of the more straight-forward methods of spatial cross-validation: divide our data into groupings that are all near each other.
 
 > Nevertheless, despite the random selection of initial cluster centers, repeated partitionings may in some cases be nearly identical. Also, k-means clustering may be less suitable for data sets with pre-existing clusters of points and/or with isolated, distant sample locations. When distinct clusters of points are present, as in multi-level sampling, it may be better to define clusters using a factor variable. ([mlr3spatiotempcv reference](https://arxiv.org/pdf/2110.12674.pdf))
 
 ```{r}
-# Define the spatial resampling method. 
-rsmp_clus <- rsmp("repeated_spcv_coords", 
-                  folds = 5, repeats = 2)
+set.seed(12345)
+rsmp_clus <- rsmp("spcv_coords", 
+                  folds = 5)
 
 # rr_sp = resample(task = task, 
 #                  learner = learner,
 #                  resampling = resampling_sp)
 
-autoplot(rsmp_clus, task, fold_id = c(1:5), size = 1) *
-  ggplot2::scale_y_continuous(breaks = seq(-3.97, -4, -0.01)) *
-  ggplot2::scale_x_continuous(breaks = seq(-79.06, -79.08, -0.02))
+autoplot(rsmp_clus, task, fold_id = c(1:5)) *
+  ggplot2::scale_x_continuous(breaks = seq(124.0, 125.0, 0.4)) *
+  ggplot2::scale_y_continuous(breaks = seq(55.38, 55.48, 0.2))
 ```
 
 I am going to ignore the leave-one-out methods for now since we don't have many data points, and so leaving any of them out would likely have a big impact on the results that we observe (I would expect it to report lower performance than we actually observe).
 
-Other options we have are:
+Other otions we have are ("method ="):
 
-1.  "custom_cv" - an mlr3-supported way to customize the resampling splits, using either a vector of a factor variable, or a feature of the input (e.g., altitude). I think that we may consider doing this
-2.  
+1.  "custom_cv" - an mlr3-supported way to customize the resampling splits, using either a vector of a factor variable, or a feature of the input (e.g., altitude). I think that we may consider doing this but am not sure how we would divide (maybe we would want to consider combining a few methods?).
+2.  "spcv_block" - block spatial cross validation. The whole area is divided up geometrically into blocks and one or multiple of these blocks is included in each split.
+3.  "sptcv_cstf" - leave-location-out, leave-time-out, or leave-location-time-out methods. Control which method is being used by parameters "time =" and "space =". I believe this is the only way to do temporal cross-validation (aside from "custom_cv").
+
+This is the block method. Equal-sized blocks are created and then grouped to create the number of splits. The more columns/rows are created, the closer this method would get to a non-spatial cross validation method, so this is an important factor for this method.
+
+This method is probably not as well suited to non-rectangular study areas.
+
+```{r}
+set.seed(12345)
+rsmp_block <- rsmp("spcv_block", 
+                  folds = 5, 
+                  cols = 4,
+                  rows = 4)
+
+autoplot(rsmp_block, task, fold_id = c(1:5), size = 1, show_blocks = TRUE)
+```
+
+We have to wait on the temporal cross-validation methods for now, since we don't have the date in our current data frame (as of 2/23).
